[metadata]
name = ror-server-bot
version = attr: ror_server_bot.__version__
description = Rigs of Rods Multiplayer Bot for RoRNet 2.43, updated to Python 3 and Discord
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = True
zip_safe = True
install_requires =
    discord.py~=2.1.0
    requests~=2.28.1
